add a first blog

--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>my simple website</title>
+    <link rel="stylesheet" href="styles/blog.css">
 </head>
 <body>
-    
+    <div>
+        <h2>hello world</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem expedita mollitia, quod placeat debitis laboriosam sit ad corporis voluptates eos? In accusamus pariatur expedita repellendus voluptatibus incidunt illo sint minima!</p>
+    </div>
 </body>
 </html>
