added new 2 blog

--- a/index.html
+++ b/index.html
@@ -11,5 +11,17 @@
         <h2>hello world</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem expedita mollitia, quod placeat debitis laboriosam sit ad corporis voluptates eos? In accusamus pariatur expedita repellendus voluptatibus incidunt illo sint minima!</p>
     </div>
+
+
+    <div>
+        <h2>hello world no 2</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem expedita mollitia, quod placeat debitis laboriosam sit ad corporis voluptates eos? In accusamus pariatur expedita repellendus voluptatibus incidunt illo sint minima!</p>
+    </div>
+
+
+    <div>
+        <h2>hello world no 3</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem expedita mollitia, quod placeat debitis laboriosam sit ad corporis voluptates eos? In accusamus pariatur expedita repellendus voluptatibus incidunt illo sint minima!</p>
+    </div>
 </body>
 </html>
