--- a/index.html
+++ b/index.html
@@ -23,5 +23,15 @@
         <h2>hello world no 3</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem expedita mollitia, quod placeat debitis laboriosam sit ad corporis voluptates eos? In accusamus pariatur expedita repellendus voluptatibus incidunt illo sint minima!</p>
     </div>
+
+
+    <div>
+        <h3>how to push intrimental</h3>
+        <ul>
+            <li>git add .</li>
+            <li>git commit -m"add meaningful comment "</li>
+            <li>git push</li>
+        </ul>
+    </div>
 </body>
 </html>
