--- a/index.html
+++ b/index.html
@@ -33,5 +33,9 @@
             <li>git push</li>
         </ul>
     </div>
+    <div>
+        <h1>marzia you ar such a beatiful</h1>
+        <img src="marjia.jpg" alt="marjia">
+    </div>
 </body>
 </html>
